--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ button {
 
     <!-- ✅ FIXED GOOGLE DRIVE IMAGE LINK -->
     <img 
-        src="https://drive.google.com/uc?export=view&id=1YcmsoVVbfFR8slmOj3Oolwd0Qq82y0Vx" 
+        src="isha.jpeg" 
         class="main-img"
         alt="Valentine Image"
         onerror="this.src='https://via.placeholder.com/320x400/ff4e50/ffffff?text=My+Valentine+❤️';"
@@ -171,3 +171,4 @@ document.getElementById("surpriseBtn").onclick = function() {
 
 </body>
 </html>
+
