--- a/index.html
+++ b/index.html
@@ -100,12 +100,10 @@ button {
     <h1>Will You Be My Valentine? 💖</h1>
 
     <!-- ✅ FIXED GOOGLE DRIVE IMAGE LINK -->
-    <img 
-        src="isha.jpeg" 
+    <img src="isha1.jpeg" 
         class="main-img"
         alt="Valentine Image"
-        onerror="this.src='https://via.placeholder.com/320x400/ff4e50/ffffff?text=My+Valentine+❤️';"
-    >
+        onerror="this.src='https://via.placeholder.com/320x400/ff4e50/ffffff?text=My+Valentine+❤️';">
 
     <div style="margin-top:30px;">
         <button id="yesBtn">Yes 💖</button>
@@ -171,4 +169,5 @@ document.getElementById("surpriseBtn").onclick = function() {
 
 </body>
 </html>
+
 
